# mini-plover

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  rustfmt.toml
src/: dictionary.rs  engine.rs  lib.rs  main.rs  plover_stroke.rs  protocol.rs  stroke.rs  translation.rs  util.rs
src/dictionary/: test.rs
src/plover_stroke/: test.rs
src/protocol/: hid.rs
src/stroke/: test.rs
src/translation/: test.rs
