[package]
name = "mini-plover"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
hidapi = "2.6.6"
log = "0.4.29"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serve = "0.0.1"
thiserror = "2.0.12"
x11rb = "0.13.2"

[dev-dependencies]
proptest = "1"
test-strategy = "0.4"
